# KIT-FORMULA-METER

./: .gitignore
app/: .gitignore  course_data.json  distance_state.json  pyproject.toml  settings.json
app/spec/can/: dl1.dbc
app/src/application/: application.py
app/src/can/: can_listeners.py  can_master.py  mock_can_sender.py
app/src/fuel/: fuel_calculator.py
app/src/gopro/: gopro_worker.py
app/src/gps/: gps_worker.py
app/src/gui/: gui.py  self_defined_widgets.py  splash_screen.py
app/src/gui/screens/: dashboard.py  menu_device.py  menu_info.py  menu_machine.py  menu_main.py  menu_race.py
app/src/hardware/: encoder_worker.py  pwm_controller.py
app/src/logger/: csv_logger.py
app/src/machine/: machine.py  runIDtest.py
app/src/mileage/: mileage_tracker.py
app/src/models/: models.py
app/src/race/: course_manager.py  lap_timer.py
app/src/service/: hardware_service.py  telemetry_service.py  vehicle_service.py
app/src/services/: hardware_service.py  telemetry_service.py  vehicle_service.py
app/src/telemetry/: google_sheets_sender.py  influx_impl.py  mqtt_sender.py  plotjuggler_sender.py  sender_interface.py
app/src/tpms/: tpms_worker.py
app/src/util/: config.py  distance_store.py  fuel_store.py  settings_store.py
can-mock/: platformio.ini
can-mock/src/: main.cpp
