[project]
name = "kart-machine-manager"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Oryomei", email = "o.ryomei1020@gmail.com" }]
dependencies = [
    "python-can>=4.3.1",
    "pyqt5>=5.15.10",
    "python-dotenv>=1.1.1",
    "pyserial>=3.5",
    "paho-mqtt>=2.1.0",
    "bleak>=1.1.1",
    "gpiozero>=2.0.1",
    "gspread>=5.10.0",
    "oauth2client>=4.1.3",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.9.0",
    "ruff>=0.4.1",
    "pytest>=8.4.2",
]


[tool.rye.scripts]
# debug 実行時は DEBUG="true" を明示的に設定する
debug = { cmd = "python main.py", env = { DEBUG = "true" } }
# prod 実行時は DEBUG="false" を明示的に設定する
prod = { cmd = "python main.py", env = { DEBUG = "false" } }
test = "pytest"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true